--- a/index.html
+++ b/index.html
@@ -1,40 +1,73 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | EvolutionX</title>
-  </head>
-  <body style="text-align: center; padding: 0; border: 0; margin: 0;">
-    <canvas id="unity-canvas" width=480 height=960 tabindex="-1" style="width: 480px; height: 960px; background: #231F20"></canvas>
+    <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background: #231F20;
+        }
+        #unity-container {
+            position: relative;
+            width: 100%;
+            height: 100%;
+        }
+        #unity-canvas {
+            width: 100%;
+            height: 100%;
+            background: #231F20;
+        }
+    </style>
+</head>
+<body>
+    <div id="unity-container">
+        <canvas id="unity-canvas" width="800" height="1600" tabindex="-1"></canvas>
+    </div>
     <script src="Build/EvolutionX_WebGL.loader.js"></script>
     <script>
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        // Mobile device style: fill the whole browser client area with the game canvas:
-        var meta = document.createElement('meta');
-        meta.name = 'viewport';
-        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-        document.getElementsByTagName('head')[0].appendChild(meta);
+        function resizeCanvas() {
+            var container = document.querySelector("#unity-container");
+            var canvas = document.querySelector("#unity-canvas");
+            var windowAspectRatio = window.innerWidth / window.innerHeight;
+            var gameAspectRatio = 800 / 1600;
 
-        var canvas = document.querySelector("#unity-canvas");
-        canvas.style.width = "100%";
-        canvas.style.height = "100%";
-        canvas.style.position = "fixed";
+            if (windowAspectRatio < gameAspectRatio) {
+                container.style.width = window.innerWidth + 'px';
+                container.style.height = (window.innerWidth / gameAspectRatio) + 'px';
+            } else {
+                container.style.width = (window.innerHeight * gameAspectRatio) + 'px';
+                container.style.height = window.innerHeight + 'px';
+            }
 
-        document.body.style.textAlign = "left";
-      }
+            canvas.width = container.clientWidth;
+            canvas.height = container.clientHeight;
+        }
 
-      createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/EvolutionX_WebGL.data",
-        frameworkUrl: "Build/EvolutionX_WebGL.framework.js",
-        codeUrl: "Build/EvolutionX_WebGL.wasm",
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "EvolutionX",
-        productVersion: "1.0",
-        // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
-        // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
-      });
+        window.addEventListener('resize', resizeCanvas);
+        window.addEventListener('load', resizeCanvas);
+
+        var unityInstance = null;
+
+        createUnityInstance(document.querySelector("#unity-canvas"), {
+            dataUrl: "Build/EvolutionX_WebGL.data",
+            frameworkUrl: "Build/EvolutionX_WebGL.framework.js",
+            codeUrl: "Build/EvolutionX_WebGL.wasm",
+            streamingAssetsUrl: "StreamingAssets",
+            companyName: "DefaultCompany",
+            productName: "EvolutionX",
+            productVersion: "1.0",
+            // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
+            // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
+        }).then((instance) => {
+            unityInstance = instance;
+        });
     </script>
-  </body>
+</body>
 </html>
