--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/EvolutionX_WebGL.data",
-        frameworkUrl: "Build/EvolutionX_WebGL.framework.js",
-        codeUrl: "Build/EvolutionX_WebGL.wasm",
+        dataUrl: "Build/EvolutionX_WebGL.data.gz",
+        frameworkUrl: "Build/EvolutionX_WebGL.framework.js.gz",
+        codeUrl: "Build/EvolutionX_WebGL.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "EvolutionX",
